--- a/OnebyAOL/MoPub-OnebyAOL-Podspecs/README
+++ b/OnebyAOL/MoPub-OnebyAOL-Podspecs/README
@@ -1,3 +1,3 @@
-We no longer distributes the CocoaPods configuration for One by AOL. 
+We no longer distribute the CocoaPods configuration for One by AOL. 
 
 
